# fisioterapia

./: .gitignore  DESCRIPTION.md  IDEAS.md  PLAN.md  README.md  db.sqlite3  main.py  pyproject.toml  requirements.txt
THINKING/: DESCRIPTION.md  IDEAS.md  PLAN.md  README.md  REQUIREMENTS.md  USERCASE.md
THINKING/MOCK_DATA/: sample_exercises.json
THINKING/MVP/: README.md  sample_data.json  sample_exercises.json
accounts/: decorators.py  tests.py  urls.py  views.py
appointments/: admin.py  models.py  serializers.py  urls.py  views.py
appointments/migrations/: 0001_initial.py  0002_message.py
config/: settings.py  urls.py  views.py
exercises/: admin.py  models.py  serializers.py  urls.py  views.py
exercises/migrations/: 0001_initial.py
patients/: admin.py  models.py  serializers.py  urls.py  views.py
patients/management/commands/: seed_data.py
patients/migrations/: 0001_initial.py
src/: main.py
treatments/: admin.py  models.py  serializers.py  urls.py  views.py
treatments/migrations/: 0001_initial.py  0002_treatmentplan_end_date_treatmentplan_start_date.py
